[gd_scene load_steps=12 format=1]

[ext_resource path="res://EnemyPieces/Components/EnemyEffects.gd" type="Script" id=1]
[ext_resource path="res://Assets/effects/frozen.png" type="Texture" id=2]
[ext_resource path="res://Assets/effects/burn.png" type="Texture" id=3]
[ext_resource path="res://EnemyPieces/Components/DeathTouch.tscn" type="PackedScene" id=4]
[ext_resource path="res://EnemyPieces/Components/FrozenParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://EnemyPieces/Components/FireEffect.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/effects/bubble_small.png" type="Texture" id=7]
[ext_resource path="res://Effects/StunSpiral.tscn" type="PackedScene" id=8]
[ext_resource path="res://EnemyPieces/Components/EnemyShieldExplosionParticles.tscn" type="PackedScene" id=9]
[ext_resource path="res://EnemyPieces/Components/Unstable.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]

resource/name = "autorun"
length = 1.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BurningEffect:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.9, 1.8 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.3, 0.8, 0.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bubble:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.9, 1.8 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.5, 1.0, 0.5 ]
}

[node name="EnemyEffects" type="Node2D"]

transform/pos = Vector2( 0, -4 )
script/script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/autorun = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "autorun"

[node name="FrozenEffect" type="Sprite" parent="."]

visibility/visible = false
visibility/opacity = 0.6
transform/pos = Vector2( 0, -2 )
texture = ExtResource( 2 )

[node name="BurningEffect" type="Sprite" parent="."]

visibility/visible = false
visibility/opacity = 0.3
transform/pos = Vector2( 0, -2 )
texture = ExtResource( 3 )

[node name="DeathTouch" parent="." instance=ExtResource( 4 )]

config/process_mode = 1

[node name="FrozenParticles" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 0, -2 )
config/process_mode = 1

[node name="FireEffect" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 0, 15 )
config/process_mode = 1

[node name="Bubble" type="Sprite" parent="."]

visibility/visible = false
visibility/opacity = 0.5
visibility/light_mask = 129
transform/pos = Vector2( 0, -6 )
z/z = 3
texture = ExtResource( 7 )

[node name="StunSpiral" parent="." instance=ExtResource( 8 )]

visibility/visible = false
transform/pos = Vector2( 0, -30 )
z/z = 3

[node name="EnemyShieldExplosionParticles" parent="." instance=ExtResource( 9 )]

[node name="Unstable" parent="." instance=ExtResource( 10 )]

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0


